--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,36 @@
 h1{
-    margin-top: -400px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
+    color: green;
+    font-size: xx-large;
 }
 
-h2{
-    font-size: 20px;
-    color:rgb(48, 179, 179);
-    letter-spacing: 3px;
+header{
+    background-color: aqua;
 }
 
-.box1,
-.box2 {   
-    margin-left: 250px;
-    text-align: justify;
-    margin-right: 250px;
+/* Using your repository from Day 1:
+Create a new branch called daily-challenge
+Create media queries for the following breakpoints:
+480px
+768px
+1024px
+Change the background color of the header at each breakpoint
+Push your changes to your daily-challenge branch */
+
+@media only screen and (max-width: 1024px){
+    header {
+            background-color: purple;
+    }
 }
 
-.box1{
-    margin-top:350px;
+@media only screen and (max-width: 768px){
+    header {
+            background-color: gray;
+    }
 }
 
-.box2 h2 {
-    text-align: right;
+@media only screen and (max-width: 600px){
+    header {
+            background-color: blue;
+    }
+}
     
-}
